<resources>
    <string name="app_name">Billing Manager</string>
    <string name="title_activity_start_application" translatable="false">StartApplication</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Bills">Bills</string>
    <string name="AddBill">Add Bill</string>
    <string name="RemoveBill">Remove Bill</string>
    <string name="buisness2">buissness</string>
    <string name="private2">private</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="Save">Export</string>
    <string name="SaveAll">Export All</string>


    //Help
    <string name="Return">Return</string>
    <string name="Help2">Help with Login</string>
    <string name="HelpText1">The developers wish you a </string>
    <string name="HelpText2">Day</string>

    //Help extra
    <string name="HelpLogin1">If you are having trouble to logging in, double-check your login credentials and try resetting your password if needed. Check for any known issues with the application s login system or server, and ensure your device is connected to the internet. Restarting the application or your device may also help. If the issue persists, contact the application s customer support team for further assistance.</string>
    <string name="HelpLogin2"> 1) Check your email, password, and confirmation password are correct and not empty \n2) Ensure that your internet connection is stable.\n\n 3) Make sure that your device isn t blocking the app s access to the internet or Firebase server.\n\n 4) Check that your email address is valid and not already registered.</string>
    <string name="Help1">Help with creating an account</string>

    //Add bill
    <string name="AddBillHin1">Title of receipt</string>
    <string name="AddBillHin2">Type the price of product</string>
    <string name="AddBillHin3">Date (double press)</string>
    <string name="AddBillHin4">Tax rate:</string>
    <string name="AddBillHin5">add bill </string>

    //Login SignUp
    <string name="Login1">Type your Email </string>
    <string name="Login2">Type Your Password</string>
    <string name="Login3">Sign In</string>
    <string name="Login4"><u>Not Registered Yet, Sign Up!</u></string>
    <string name="Login5"><u>Help</u></string>
    <string name="Login6">Retype Your Password</string>
    <string name="Login7"><u>Reset Password</u></string>
    <string name="SignUp">Sign up</string>
    <string name="SignUp2"><u>Already Registered, Sign In!</u></string>










</resources>