<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context="applicationMain.ui.removeBill.RemoveBillFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-57dp">

        <!-- Category selection -->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="16dp">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/category_toggle_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dbusiness"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/buisness2"
                    android:textColor="@color/white"
                    app:cornerRadius="15dp"
                    app:strokeColor="@color/white"
                    app:strokeWidth="2dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dprivate"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/private2"
                    android:textColor="@color/white"
                    app:cornerRadius="15dp"
                    app:strokeColor="@color/white"
                    app:strokeWidth="2dp" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </HorizontalScrollView>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <!-- Display area -->


        <ListView
            android:id="@+id/DDisplay_Info2"
            android:layout_width="match_parent"
            android:layout_height="322dp"
            android:layout_weight="2"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="14dp"
            android:paddingBottom="16dp"
            tools:listitem="@layout/list_item">


        </ListView>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/delete_title"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="70dp"
            android:clickable="false"
            android:hint="@string/title"
            android:inputType="text"
            android:visibility="visible"
            android:textSize="20sp"
            android:gravity="center" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/category_toggle_group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton

                android:id="@+id/delete"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/white"
                app:cornerRadius="15dp"

                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />




        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>